--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             background: linear-gradient(
                 to right,
                 rgba(255, 255, 255, 0) 0%,
-                rgba(255, 255, 255, 0.3) 50%,
+                rgba(255, 255, 255, 0.5) 50%,
                 rgba(255, 255, 255, 0) 100%
             );
             transform: rotate(30deg);
@@ -187,7 +187,7 @@
             text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
         }
 
-        .app-link {
+       .app-link {
             background: linear-gradient(135deg, var(--accent-color), var(--primary-color), var(--accent-color));
             color: var(--bg-dark);
             text-decoration: none;
@@ -195,7 +195,7 @@
             border-radius: 30px;
             display: inline-flex;
             align-items: center;
-            transition: all 0.1s ease;
+            transition: all 0.3s ease;
             font-size: 1.1rem;
             font-weight: 500;
             position: relative;
@@ -209,19 +209,26 @@
         .app-link::before {
             content: '';
             position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(135deg, var(--primary-color), var(--accent-color), var(--primary-color));
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(
+                to right,
+                rgba(255, 255, 255, 0) 0%,
+                rgba(255, 255, 255, 0.3) 50%,
+                rgba(255, 255, 255, 0) 100%
+            );
+            transform: rotate(30deg);
+            transition: all 0.5s ease;
             opacity: 0;
-            transition: opacity var(--transition-speed) ease;
-            z-index: -1;
         }
 
         .app-link:hover::before {
             opacity: 1;
+            animation: shimmer-button 1.5s infinite;
         }
+
 
         .app-link:hover {
             color: var(--bg-dark);
@@ -285,6 +292,24 @@
             border: 1px solid rgba(0,0,0,0.1);
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05), 0 1px 8px rgba(0, 0, 0, 0.1);
         }
+        
+                body.light-theme .app-card::before {
+            background: linear-gradient(
+                to right,
+                rgba(255, 255, 255, 0) 0%,
+                rgba(255, 255, 255, 0.8) 50%,
+                rgba(255, 255, 255, 0) 100%
+            );
+            
+        }
+                body.light-theme .app-link::before {
+            background: linear-gradient(
+                to right,
+                rgba(255, 255, 255, 0) 0%,
+                rgba(255, 255, 255, 0.5) 50%,
+                rgba(255, 255, 255, 0) 100%
+            );
+        }
 
         body.light-theme .app-icon {
             color: var(--text-light);
@@ -340,6 +365,14 @@
         }
 
         @keyframes shimmer {
+            0% {
+                transform: translateX(-100%) rotate(30deg);
+            }
+            100% {
+                transform: translateX(100%) rotate(30deg);
+            }
+        }
+                @keyframes shimmer-button {
             0% {
                 transform: translateX(-100%) rotate(30deg);
             }
