--- a/index.html
+++ b/index.html
@@ -503,11 +503,10 @@
                 stats: {}
             },
             { 
-                title: 'مجموعات دوائية', 
-                url: '#', 
+                title: 'مجموعات دوائية (Beta)', 
+                url: 'https://finalapp-nine.vercel.app/', 
                 icon: 'fa-pills', 
                 gradient: ['#663399', '#8a2be2', '#663399'], 
-                comingSoon: true,
                 description: '',
                 stats: {}
             }
