--- a/index.html
+++ b/index.html
@@ -485,32 +485,49 @@
 
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script>
-       const apps = [
-            { 
-                title: 'خارجي قوي عاملة', 
-                url: 'https://datakid-github-io.vercel.app/', 
-                icon: 'fa-briefcase', 
-                gradient: ['#3b82f6', '#60a5fa', '#2563eb'],
-                description: '',
-                stats: {}
-            },
-            { 
-                title: 'خارجي طلاب', 
-                url: 'https://datakid2.vercel.app/', 
-                icon: 'fa-graduation-cap', 
-                gradient: ['#10b981', '#34d399', '#059669'],
-                description: '',
-                stats: {}
-            },
-            { 
-                title: 'مجموعات دوائية (Beta)', 
-                url: 'https://finalapp-nine.vercel.app/', 
-                icon: 'fa-pills', 
-                gradient: ['#663399', '#8a2be2', '#663399'], 
-                description: '',
-                stats: {}
-            }
-        ];
+const apps = [
+    { 
+        title: 'خارجي قوي عاملة', 
+        url: 'https://datakid-github-io.vercel.app/', 
+        icon: 'fa-briefcase', 
+        gradient: ['#3b82f6', '#60a5fa', '#2563eb'],
+        description: '',
+        stats: {}
+    },
+    { 
+        title: 'خارجي طلاب', 
+        url: 'https://datakid2.vercel.app/', 
+        icon: 'fa-graduation-cap', 
+        gradient: ['#10b981', '#34d399', '#059669'],
+        description: '',
+        stats: {}
+    },
+    { 
+        title: 'مجموعات دوائية (Beta)', 
+        url: 'https://finalapp-nine.vercel.app/', 
+        icon: 'fa-pills', 
+        gradient: ['#663399', '#8a2be2', '#663399'], 
+        description: '',
+        stats: {}
+    },
+    { 
+        title: 'لستة الادوية', 
+        url: 'https://searchbar-five-beta.vercel.app/', 
+        icon: 'fa-search', 
+        gradient: ['#14B8A6', '#2DD4BF', '#0D9488'],
+        description: '',
+        stats: {}
+    },
+    { 
+        title: 'بروتوكولات الصرف', 
+        url: 'https://protocols-one.vercel.app/', 
+        icon: 'fa-book', 
+        gradient: ['#FF6F61', '#FF8A65', '#E57373'], 
+        description: '',
+        stats: {}
+    }
+];
+
 
         function createAppCard(app) {
             const card = document.createElement('div');
