--- a/index.html
+++ b/index.html
@@ -519,6 +519,14 @@ const apps = [
         stats: {}
     },
     { 
+        title: 'المنفذ التجاري (Beta)', 
+        url: 'https://newlist-eta.vercel.app/', 
+        icon: 'fa-dollar-sign', 
+        gradient: ['#4CAF50', '#66BB6A', '#43A047'],
+        description: '',
+        stats: {}
+    },
+    { 
         title: 'بروتوكولات الصرف', 
         url: 'https://protocols-one.vercel.app/', 
         icon: 'fa-book', 
