--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ const apps = [
         stats: {}
     },
     { 
-        title: 'مجموعات دوائية (Beta)', 
+        title: 'مجموعات دوائية (سبتمبر)', 
         url: 'https://finalapp-nine.vercel.app/', 
         icon: 'fa-pills', 
         gradient: ['#663399', '#8a2be2', '#663399'], 
@@ -519,10 +519,10 @@ const apps = [
         stats: {}
     },
     { 
-        title: 'المنفذ التجاري (Beta)', 
+        title: 'المنفذ والتحمل', 
         url: 'https://newlist-eta.vercel.app/', 
         icon: 'fa-dollar-sign', 
-        gradient: ['#4CAF50', '#66BB6A', '#43A047'],
+        gradient: ['#3F51B5', '#5C6BC0', '#3949AB'],
         description: '',
         stats: {}
     },
