--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@ const apps = [
         title: 'المنفذ والتحمل', 
         url: 'https://newlist-eta.vercel.app/', 
         icon: 'fa-dollar-sign', 
-        gradient: ['#3F51B5', '#5C6BC0', '#3949AB'],
+        gradient: ['#FF1493', '#FF69B4', '#FF4081'],
         description: '',
         stats: {}
     },
