--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@ const apps = [
     },
     { 
         title: 'المنفذ والتحمل', 
-        url: 'https://newlist-eta.vercel.app/', 
+        urls: ['https://newlist-eta.vercel.app/', 'https://newlist2.vercel.app/'],
         icon: 'fa-dollar-sign', 
         gradient: ['#FF1493', '#FF69B4', '#FF4081'],
         description: '',
@@ -536,37 +536,41 @@ const apps = [
     }
 ];
 
+function createAppCard(app) {
+    const card = document.createElement('div');
+    card.className = 'app-card';
+    card.style.background = `linear-gradient(135deg, ${app.gradient[0]}22, ${app.gradient[1]}22, ${app.gradient[2]}22)`;
 
-        function createAppCard(app) {
-            const card = document.createElement('div');
-            card.className = 'app-card';
-            card.style.background = `linear-gradient(135deg, ${app.gradient[0]}22, ${app.gradient[1]}22, ${app.gradient[2]}22)`;
+    const buttonGradient = `linear-gradient(135deg, ${app.gradient[0]}, ${app.gradient[1]}, ${app.gradient[2]})`;
 
-            const buttonGradient = `linear-gradient(135deg, ${app.gradient[0]}, ${app.gradient[1]}, ${app.gradient[2]})`;
+    let appUrl = app.url;
+    if (app.urls && app.urls.length === 2) {
+        appUrl = Math.random() < 0.5 ? app.urls[0] : app.urls[1];
+    }
 
-            card.innerHTML = `
-                <div class="app-icon-wrapper" style="background: ${buttonGradient}">
-                    <i class="app-icon fas ${app.icon}" aria-hidden="true"></i>
-                </div>
-                <h3 class="app-title" style="background: ${buttonGradient}; -webkit-background-clip: text; -webkit-text-fill-color: transparent;">${app.title}</h3>
-                <a href="${app.url}" target="_blank" rel="noopener noreferrer" class="app-link" style="background: ${buttonGradient}">
-                    ${app.comingSoon ? 'Coming Soon' : 'Launch'} <i class="fas ${app.comingSoon ? 'fa-clock' : 'fa-external-link-alt'}" aria-hidden="true"></i>
-                    <span class="visually-hidden">${app.comingSoon ? 'Coming Soon' : 'Launch'} ${app.title}</span>
-                </a>
-            `;
+    card.innerHTML = `
+        <div class="app-icon-wrapper" style="background: ${buttonGradient}">
+            <i class="app-icon fas ${app.icon}" aria-hidden="true"></i>
+        </div>
+        <h3 class="app-title" style="background: ${buttonGradient}; -webkit-background-clip: text; -webkit-text-fill-color: transparent;">${app.title}</h3>
+        <a href="${appUrl}" target="_blank" rel="noopener noreferrer" class="app-link" style="background: ${buttonGradient}">
+            ${app.comingSoon ? 'Coming Soon' : 'Launch'} <i class="fas ${app.comingSoon ? 'fa-clock' : 'fa-external-link-alt'}" aria-hidden="true"></i>
+            <span class="visually-hidden">${app.comingSoon ? 'Coming Soon' : 'Launch'} ${app.title}</span>
+        </a>
+    `;
 
-            if (app.comingSoon) {
-                const link = card.querySelector('.app-link');
-                link.addEventListener('click', (e) => e.preventDefault());
-                link.setAttribute('aria-disabled', 'true');
-                link.setAttribute('tabindex', '-1');
-            }
+    if (app.comingSoon) {
+        const link = card.querySelector('.app-link');
+        link.addEventListener('click', (e) => e.preventDefault());
+        link.setAttribute('aria-disabled', 'true');
+        link.setAttribute('tabindex', '-1');
+    }
 
-            card.addEventListener('mouseenter', () => highlightCard(card));
-            card.addEventListener('mouseleave', () => removeHighlight());
+    card.addEventListener('mouseenter', () => highlightCard(card));
+    card.addEventListener('mouseleave', () => removeHighlight());
 
-            return card;
-        }
+    return card;
+}
 
         function renderApps() {
             const appGrid = document.getElementById('appGrid');
