--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +7,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
-
 :root {
   --bg-dark: #0f1624;
   --bg-light: #f0f4f8;
@@ -114,16 +111,7 @@ h1:hover::after {
   height: 350px; 
 }
 
-@keyframes breathe {
-  0%, 100% {
-    transform: scale(1) translateY(0);
-  }
-  50% {
-    transform: scale(1.03) translateY(-5px);
-  }
-}
-
-.app-card::before, .app-card::after {
+.app-card::after {
   content: '';
   position: absolute;
   top: -50%;
@@ -133,7 +121,7 @@ h1:hover::after {
   background: linear-gradient(
     to right,
     rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 0.3) 50%,
+    rgba(255, 255, 255, 0.1) 50%,
     rgba(255, 255, 255, 0) 100%
   );
   transform: rotate(30deg);
@@ -141,12 +129,21 @@ h1:hover::after {
   opacity: 0;
 }
 
-.app-card:hover::before, .app-card:hover::after {
+.app-card:hover::after {
   opacity: 1;
-  animation: ultra-shimmer 1.5s infinite;
+  animation: shimmer 2s infinite;
 }
 
-@keyframes ultra-shimmer {
+@keyframes breathe {
+  0%, 100% {
+    transform: scale(1) translateY(0);
+  }
+  50% {
+    transform: scale(1.03) translateY(-5px);
+  }
+}
+
+@keyframes shimmer {
   0% {
     transform: translateX(-100%) rotate(30deg);
   }
@@ -161,8 +158,8 @@ h1:hover::after {
 }
 
 .app-icon-wrapper {
-  width: 130px; /* Increased from 110px */
-  height: 130px; /* Increased from 110px */
+  width: 130px;
+  height: 130px;
   border-radius: 50%;
   background: var(--premium-gradient);
   display: flex;
@@ -180,7 +177,7 @@ h1:hover::after {
 }
 
 .app-icon {
-  font-size: 3.8rem; /* Increased from 3.2rem */
+  font-size: 3.8rem;
   color: var(--text-dark);
   transition: all var(--transition-speed) ease;
   z-index: 1;
@@ -244,7 +241,7 @@ h1:hover::after {
 
 .app-link:hover::before {
   opacity: 1;
-  animation: ultra-shimmer 1s infinite linear;
+  animation: shimmer 1s infinite linear;
 }
 
 .app-link:active {
@@ -253,34 +250,6 @@ h1:hover::after {
 
 .app-link:focus {
   outline: none;
-}
-
-.app-link i {
-  margin-left: 0.75rem;
-  font-size: 1rem;
-  transition: transform var(--transition-speed) ease;
-}
-
-.app-link:hover i {
-  transform: translateX(5px) rotate(-10deg);
-}
-
-@keyframes shimmer {
-  0% {
-    transform: translateX(-100%) rotate(30deg);
-  }
-  100% {
-    transform: translateX(100%) rotate(30deg);
-  }
-}
-
-@keyframes shimmer-button {
-  0% {
-    transform: translateX(-100%) rotate(30deg);
-  }
-  100% {
-    transform: translateX(100%) rotate(30deg);
-  }
 }
 
 .app-link i {
@@ -334,7 +303,7 @@ body.light-theme .app-card {
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05), 0 1px 8px rgba(0, 0, 0, 0.1);
 }
 
-body.light-theme .app-card::before {
+body.light-theme .app-card::after {
   background: linear-gradient(
     to right,
     rgba(200, 200, 200, 0) 0%,
@@ -343,13 +312,9 @@ body.light-theme .app-card::before {
   );
 }
 
-body.light-theme .app-link::before {
-  background: linear-gradient(
-    to right,
-    rgba(200, 200, 200, 0) 0%,
-    rgba(200, 200, 200, 0.7) 50%,
-    rgba(200, 200, 200, 0) 100%
-  );
+body.light-theme .app-card:hover::after {
+  opacity: 1;
+  animation: shimmer 2s infinite;
 }
 
 body.light-theme .app-icon {
@@ -425,12 +390,12 @@ body.light-theme h1 {
   }
 
   .app-icon-wrapper {
-    width: 120px; /* Slightly reduced for mobile, but still larger than original */
+    width: 120px;
     height: 120px;
   }
 
   .app-icon {
-    font-size: 3.5rem; /* Adjusted for mobile */
+    font-size: 3.5rem;
   }
 }
 
@@ -460,7 +425,7 @@ body.light-theme h1 {
   padding: 0;
   margin: -1px;
   overflow: hidden;
-  clip: rect(0, 0, 0,0);
+  clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   border: 0;
 }
@@ -612,8 +577,6 @@ body::before {
     padding: 2rem;
   }
 
-  /* Icon size adjustments for mobile are already included in the previous section */
-
   .app-title {
     font-size: 1.75rem;
   }
@@ -654,38 +617,6 @@ body.light-theme h1 {
   text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
 }
 
-.app-card::after {
-  content: '';
-  position: absolute;
-  top: -50%;
-  left: -50%;
-  width: 200%;
-  height: 200%;
-  background: linear-gradient(
-    to right,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 0.1) 50%,
-    rgba(255, 255, 255, 0) 100%
-  );
-  transform: rotate(30deg);
-  transition: opacity 0.3s;
-  opacity: 0;
-}
-
-.app-card:hover::after {
-  opacity: 1;
-  animation: shimmer 2s infinite;
-}
-
-@keyframes shimmer {
-  0% {
-    transform: translateX(-100%) rotate(30deg);
-  }
-  100% {
-    transform: translateX(100%) rotate(30deg);
-  }
-}
-
 .app-card {
   display: flex;
   flex-direction: column;
@@ -719,6 +650,7 @@ body.light-theme .theme-toggle,
 body.light-theme .sound-toggle {
   text-shadow: 1px 1px 2px rgba(0,0,0,0.15);
 }
+
 .app-card {
   position: relative;
   overflow: hidden;
